--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,7 @@
-<h1><%= student.first_name %><%= student.last_name %></h1>
+
+
+<div>
+  <% @students.each do |student| %>
+    <h1><%= student.first_name + " " + student.last_name %></h1>
+  <% end %>
+</div>
